# Le-Glacier-Gourmand

./: .env.example  .gitignore  README.md  create_preset.js  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  netlify.toml  package-lock.json  package.json  server.ts  vite.config.ts
functions-src/: Cargo.toml
functions-src/src/: main.rs
netlify/functions/: chat.mjs
src/: App.tsx  firebase.ts  index.css
src/components/: AIChat.tsx  AuthModal.tsx  BackToTop.tsx  CartDrawer.tsx  CheckoutModal.tsx  Commitment.tsx  CustomCursor.tsx  Desserts.tsx  EspacePro.tsx  EventBookingModal.tsx  Events.tsx  Footer.tsx  Gallery.tsx  HappyBreakfastBuilder.tsx  Hero.tsx  IceCreamTakeaway.tsx  LazyImage.tsx  Logo.tsx  Menu.tsx  Navbar.tsx  Preloader.tsx  ProductReviewSection.tsx  Reviews.tsx  ScrollProgressBar.tsx  StarRating.tsx  Story.tsx  WhatsAppButton.tsx
src/context/: CartContext.tsx  EspaceProContext.tsx  LanguageContext.tsx  MenuContext.tsx  ToastContext.tsx
src/data/: index.ts  translations.ts
src/pages/: AdminPage.tsx
src/services/: MenuService.ts  ReviewService.ts
src/types/: index.ts
src/utils/: image.ts
