[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# Lambda requires the binary to be named "bootstrap"
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
opt-level = "z"      # Optimise pour la taille
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
lambda_http   = "0.13.0"
tokio         = { version = "1", features = ["macros", "rt-multi-thread"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
# rustls-tls évite les dépendances OpenSSL non disponibles sur musl
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
